crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/array_length/address_constant_length/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 5462] Error: Invalid array length, expected integer literal or constant expression.
   ╭─[input.sol:6:13]
   │
 6 │     uint256[n] arr;
   │             ┬  
   │             ╰── Error occurred here.
───╯
